# oxagworldgenerator

./: .gitignore  Cargo.toml  README.md  \examples\save.json  test.json
examples/: build_example.rs  draw_example.rs  load_example.rs  loaddraw_example.rs  save.json  save_example.rs  todo.rs  wrong_levels_example.rs
src/: lib.rs
src/examples/: mod.rs
src/test/: mod.rs  tile.rs
src/tools/: mod.rs
src/utils/: constants.rs  errors.rs  mod.rs  traits.rs
src/world_generator/: constants.rs  content_options.rs  content_spawn_option.rs  environmental_condition_options.rs  mod.rs  tile_content_spawn_options.rs  tile_type_options.rs  tile_type_spawn_levels.rs  utilities.rs  world_generator.rs  world_generator_builder.rs
src/world_generator/presets/: content_presets.rs  content_spawn_presets.rs  environmental_presets.rs  mod.rs  tile_type_presets.rs
src/world_generator/serial/: mod.rs
src/world_generator/spawning_tools/: batch_spawn.rs  circle_spawn.rs  lava_spawn.rs  line_spawn.rs  matrix_spawn.rs  maze.rs  mod.rs  random_spawn.rs  river_spawn.rs  street_spawn.rs
src/worldgenerator/: content_gen_options.rs  content_options.rs  environmental_condition_options.rs  mod.rs  world_gen_options.rs  world_options.rs
