[package]
name = "lib_oxidizing_agents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = {path = "../Robotic-Lib"}
rand = "0.8.5"
noise = {version = "0.8.2", features = ["images"] }
strum = "0.25.0"