[package]
name = "oxagworldgenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = {path = "../Robotic-Lib"}
rand = "0.8.5"
noise = {version = "0.8.2" }
strum = "0.25.0"
image = "0.24.7"
time = "0.3.30"
fltk = {version = "1.4.19", features = ["fltk-bundled"]}
serde_json = "1.0.108"
serde = "1.0.193"