[package]
name = "oxagworldgenerator"
version = "0.1.2"
edition = "2021"
authors = ["Filippo Lollato", "Giulio Pimenoff Verdolin", "Marco Basso"]
publish = ["kellnr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = {version = "0.1.21", registry = "kellnr"}
rand = "0.8.5"
noise = {version = "0.8.2" }
strum = "0.25.0"
image = "0.24.7"
time = "0.3.30"
serde_json = "1.0.108"
serde = "1.0.193"
eframe = "0.24.1"
egui_extras = { version = "*", features = ["all_loaders"] }
env_logger = "0.10.1"
